tests/dev_and_build/errors/js_import_not_found/manual_test_jsenv_dev_server.mjs
import { startDevServer } from "@jsenv/core";

await startDevServer({
  sourceDirectoryUrl: new URL("./client/", import.meta.url),
  clientAutoreload: {
    clientServerEventsConfig: {
      logs: false,
    },
  },
  port: 6578,
});
